--- a/webgl-demo.html
+++ b/webgl-demo.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="read_data.js" type="text/javascript"></script>
     <script src="skeleton_and_skin.js" type="text/javascript"></script>
+    <script src="animation.js" type="text/javascript"></script>
 
 	
    <!-- Fragment shader program -->
